# somecode

./: pyproject.toml
1/: hash_table.py  main.py
11/: in.txt  main.py
121/: main.py
125/: main.py
128/: main.py
15/: in.txt  main.py
153/: in.txt  main.py
20/: main.py
217/: __init__.py  main.py
238/: main.py
242/: counter.py  sort.py
3/: best.py  in.txt  main.py
347/: main.py
424/: in.txt  main.py
49/: main.py
501/: main.py
76/: in.txt  main.py
algo/: tree.py
